--- a/Linguagem de Programacao II/Aula_27-08/ProjetoAula1.dproj
+++ b/Linguagem de Programacao II/Aula_27-08/ProjetoAula1.dproj
@@ -143,6 +143,15 @@
             <FormType>dfm</FormType>
             <DesignClass>TDataModule</DesignClass>
         </DCCReference>
+        <DCCReference Include="UnDMCadastroCurso.pas">
+            <Form>DMCadastroCurso</Form>
+            <FormType>dfm</FormType>
+            <DesignClass>TDataModule</DesignClass>
+        </DCCReference>
+        <DCCReference Include="UnFormCadastroCurso.pas">
+            <Form>FormCadastroCurso</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
